# cpxy

./: .dockerignore  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.cp  Dockerfile.gh  README.md  build.rs  build_all.sh  build_android_libs.sh  build_linux.sh  build_unix.sh  devit.toml  fly.toml
.github/: dependabot.yml
.github/workflows/: build.yml  build_and_release.yml  docker-publish.yml  rust.yml
android/: build.gradle
android/app/: build.gradle
app/: Cargo.toml  build.rs
app/android/: .gitignore
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/dev/fanchao/: CJKProxy.java
app/android/app/src/main/java/dev/fanchao/cjkproxy/: App.kt  EditActivity.kt  EditConfigActivity.kt  MainActivity.kt  ProxyConfiguration.kt  ProxyInstances.kt  ProxyService.kt  Service.kt  UpstreamEditFragment.kt
app/android/app/src/main/java/dev/fanchao/cjkproxy/ui/: AdminActivity.kt  MainActivity.kt
app/android/app/src/main/java/dev/fanchao/cjkproxy/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/android/app/src/main/res/layout/: activity_add_config.xml  activity_main.xml  view_config_item.xml
app/android/app/src/main/res/menu/: main.xml  main_action.xml
app/android/app/src/main/res/values/: strings.xml
app/android/app/src/test/java/dev/fanchao/cjkproxy/: ExampleUnitTest.kt
app/src/: box_buf.rs  broadcast.rs  buf.rs  client.rs  config.rs  controller.rs  counter.rs  dns.rs  fetch.rs  handshake.rs  http.rs  io.rs  jni_export.rs  lib.rs  pattern.rs  server.rs  shared_udp.rs  socks4.rs  stream.rs  test.rs  tls.rs  transparent.rs  udp_relay.rs  url.rs  utils.rs  ws.rs
app/src/abp/: mod.rs
app/src/cipher/: client.rs  noop.rs  partial.rs  server.rs  strategy.rs  stream.rs  suite.rs
app/src/client/: handler.rs  http.rs  mod.rs  tcp.rs  udp.rs  utils.rs
app/src/dns/: answer.rs  direct.rs  labeled.rs  message.rs  mod.rs  question.rs  req.rs  server.rs
app/src/geoip/: country_code.rs  mod.rs
app/src/io/: mod.rs  tcp.rs  udp.rs  utils.rs
app/src/proxy/: dns.rs  mod.rs  protocol.rs  tcp.rs  udp.rs
app/src/rsocks/: client.rs  mod.rs  server.rs
app/src/rt/: mod.rs
app/src/server/: dns.rs  handler.rs  mod.rs  tcp.rs  udp.rs
app/src/socks5/: addr.rs  greeting.rs  mod.rs  relay.rs  req.rs  udp.rs
app/src/test/: http.rs  mod.rs  tcp_socks5.rs  udp.rs
app/src/vpn/: channel.rs  device.rs  mod.rs  serve.rs  tcp.rs  tun.rs
app/web/: package-lock.json  package.json
app/web/src/: App.tsx  BasicSettingsEdit.tsx  UpstreamEdit.tsx  UpstreamList.tsx  config.ts  models.ts  trafficRules.ts  useEditState.ts  useHttp.ts  useSnackbar.tsx
cpxy/: Cargo.toml
cpxy/android/: .gitignore  build.gradle  settings.gradle
cpxy/android/app/: build.gradle
cpxy/android/app/src/main/java/dev/fanchao/: CJKProxy.java
cpxy/android/app/src/main/java/dev/fanchao/cjkproxy/ui/: AdminActivity.kt
cpxy/android/app/src/main/res/values/: strings.xml
cpxy/android/etc/: debug.keystore
cpxy/src/: .gitignore  addr.rs  controller_old.rs  dns.rs  handshaker.rs  jni_export.rs  lib.rs  measure.rs  pattern.rs  regex.rs  rule.rs  socks4.rs  tls.rs  utils.rs
cpxy/src/bench_client/: mod.rs
cpxy/src/cipher/: chacha20.rs  mod.rs  stream.rs
cpxy/src/client/: common.rs  dispatch.rs  mod.rs  settings.rs  stats.rs
cpxy/src/client/rule/: action.rs  display.rs  domain.rs  ip.rs  line.rs  mod.rs  op.rs  parser.rs  program.rs  value.rs
cpxy/src/controller/: mod.rs
cpxy/src/controller/api/: mod.rs
cpxy/src/dnsman/: client.rs  list_base.rs  mod.rs  server.rs
cpxy/src/domain_list/: mod.rs
cpxy/src/geoip/: country_code.rs  mod.rs
cpxy/src/http/: display.rs  mod.rs  req.rs  res.rs  utils.rs  writer.rs
cpxy/src/io/: mod.rs  tcp.rs  timing.rs  utils.rs
cpxy/src/protocol/: acceptor.rs  dynamic.rs  mod.rs  reporter.rs  req.rs  server.rs  stream.rs  test.rs
cpxy/src/protocol/direct/: mod.rs
cpxy/src/protocol/firetcp/: pw.rs  server.rs
cpxy/src/protocol/firetcp/cipher/: mod.rs  read.rs  test.rs  write.rs
cpxy/src/protocol/http/: auth.rs  mod.rs  server.rs
cpxy/src/protocol/socks5/: mod.rs  server.rs
cpxy/src/protocol/tcpman/: crypto.rs  key.rs  mod.rs  params.rs  server.rs
cpxy/src/protocol/tcpman_old/: mod.rs
cpxy/src/protocol/tcpman_old/cipher/: server.rs
cpxy/src/socks5/: greeting.rs  mod.rs  req.rs
cpxy/src/test/: mod.rs
cpxy/src/ws/: client.rs  common_user_agents.txt  mod.rs  server.rs
cpxy/web/public/: index.html
cpxy/web/src/: App.tsx  BasicSettingsEdit.tsx  UpstreamList.tsx  useEditState.ts  useSnackbar.tsx
docker/: platform.sh
example/: multiple.yaml
fetcher/: Cargo.toml
fetcher/src/: domain_list.rs  geoip.rs  main.rs
scripts/: rust-target-to-docker.sh
src/: broadcast.rs  buf.rs  chucked.rs  chunked.rs  client.rs  client_old.rs  config.rs  controller.rs  counter.rs  cursor.rs  decision_log.rs  dns.rs  domains.rs  fetch.rs  geoip.rs  handshake.rs  handshaker.rs  http.rs  http_path.rs  io.rs  iptables.rs  jni_export.rs  lib.rs  main.rs  parse.rs  rule.rs  server.rs  shared_udp.rs  sni.rs  socks4.rs  socks5.rs  socks5_old.rs  stream.rs  test.rs  tls.rs  udp.rs  udp_relay.rs  utils.rs  ws.rs
src/abp/: mod.rs
src/bench_client/: mod.rs
src/bin2/: client.rs  server.rs
src/cipher/: client.rs  handshake_http.rs  mod.rs  noop.rs  partial.rs  server.rs  strategy.rs  stream.rs  suite.rs  utils.rs
src/client/: common.rs  handler.rs  http.rs  mod.rs  stats.rs  tcp.rs  transparent.c  transparent.rs  udp.rs  utils.rs
src/controller_config/: fs.rs  mod.rs
src/echo_client/: mod.rs
src/geoip/: mod.rs
src/http/: req.rs  res.rs
src/io/: bytes_ref.rs  dgram.rs  mod.rs  stream.rs  tcp.rs  timer.rs  udp.rs  utils.rs
src/protocol/: dynamic.rs  mod.rs  stream.rs  test.rs
src/proxy/: handler.rs  mod.rs  protocol.rs  tcp.rs  udp.rs
src/rsocks/: client.rs  server.rs
src/rt/: mod.rs  smol.rs
src/server/: dns.rs  echo.rs  handler.rs  tcp.rs  udp.rs
src/test/: mod.rs  (+4 more)
userip/: Cargo.toml
userip/src/: buf.rs  lib.rs  tcp.rs  tcp_sockets.rs  utils.rs
web/: package.json
(+86 files in other folders)
