[package]
name = "cjk-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "io-util", "time", "sync"] }
smol = "1"
smol-timeout = "0"
futures-lite = "1"
futures-util = "0"
anyhow = "1"
httparse = "1"
log = "0"
env_logger = "0"
bytes = "1"
chacha20 = "0"
cipher = "0"
pin-project-lite = "0"
rand = "0"
base64 = "0"
bincode = "2.0.0-beta.2"
aes = { version = "0", features = ["ctr"] }
url = "2"
clap = { version = "3", features = ["derive"] }
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = "symbols"

[build-dependencies]
ureq = "2"
num-traits = "0"
cc = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0"
android_logger = "0"

[lib]
crate-type = ["rlib", "dylib"]
name = "proxy"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"))'.dependencies]
cpufeatures = "0"