[package]
edition = "2021"
name = "cjk-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio = ["dep:tokio"]
smol = ["dep:smol", "dep:smol-timeout"]
default = ["smol"]

[dependencies]
adblock = {version = "0", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"]}
anyhow = "1"
async-broadcast = "0"
base64 = "0"
bytes = {version = "1", features = ["serde"]}
chacha20 = "0"
cipher = "0"
clap = {version = "3", features = ["derive"]}
env_logger = "0"
futures-lite = "1"
futures-util = "0"
httparse = "1"
ipnetwork = "0"
jni = "0"
lazy_static = "1"
log = "0"
mime_guess = "2"
pin-project-lite = "0"
rand = "0"
regex = "1"
rust-embed = '6'
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0"
smol = { version = "1", optional = true }
smol-timeout = { version = "0", optional = true }
chrono = {version = "0", features = ["serde"]}
dirs = "4" 
serde_with = "1"
byteorder = "1"
smallvec = {version = "1", features = ["const_generics"] }
bit = "0"
enum-primitive-derive = "0"
num-traits = "0"
either = "1"
libc = "0"
uuid = { version = "0", features = ["v4"] }
derive_more = "0"
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
maplit = "1"

[target.'cfg(unix)'.dependencies]
nix = "0"

[target.'cfg(target_os = "linux")'.dependencies]
tun = "0"
smoltcp = "0"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"


[lib]
crate-type = ["rlib", "dylib"]
name = "proxy"

[target.'cfg(not(target_arch = "mips"))'.dependencies]
futures-rustls = "0"
webpki-roots = "0"

[profile.dev]
incremental = true

[profile.release]
strip = "symbols"
lto = true