[package]
edition = "2021"
name = "cpxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-broadcast = "0"
async-io = "1"
async-native-tls = { version = "0", features = ["vendored"] }
async-net = "1"
async-stream = "0"
async-trait = "0"
atomic = "0"
base64 = "0"
bit = "0"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chacha20 = "0"
chrono = { version = "0", features = ["serde"] }
cipher = "0"
clap = { version = "4", features = ["derive"] }
derive_more = "0"
dirs = "4"
dns-parser = "0"
either = "1"
enum-primitive-derive = "0"
env_logger = "0"
futures = "0"
futures-util = "0"
httparse = "1"
ipnetwork = "0"
jni = "0"
lazy_static = "1"
libc = "0"
log = "0"
mime_guess = "2"
num-traits = "0"
parking_lot = "0"
pin-project-lite = "0"
rand = { version = "0", features = ["min_const_gen"] }
regex = "1"
rust-embed = "6"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
serde_yaml = "0"
siphasher = "0"
smallvec = { version = "1", features = ["const_generics", "write"] }
smol = { version = "1" }
smol-timeout = { version = "0" }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
blake2 = "0"
tls-parser = "0"

[dev-dependencies]
maplit = "1"

[build-dependencies]
cc = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0", features = ["net"] }

[target.'cfg(target_os = "linux")'.dependencies]
interfaces = "0"
iptables = "0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"

[lib]
crate-type = ["rlib", "dylib"]
name = "cpxy"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0"

[profile.dev]
incremental = true

[profile.release]
strip = "symbols"

[profile.bench]
debug = true
