[package]
name = "cjk-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1"
smol-timeout = "0"
futures-lite = "1"
futures-util = "0"
anyhow = "1"
httparse = "1"
log = "0"
env_logger = "0"
bytes = { version = "1", features = ["serde"] }
chacha20 = "0"
cipher = "0"
pin-project-lite = "0"
rand = "0"
base64 = "0"
aes = { version = "0", features = ["ctr"] }
clap = { version = "3", features = ["derive"] }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
adblock = { version = "0", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"]}
ipnetwork = "0"
serde_yaml = "0"
jni = "0"
async-broadcast = "0"

[dev-dependencies]
maplit = "1"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"

[lib]
crate-type = ["rlib", "dylib"]
name = "proxy"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"))'.dependencies]
cpufeatures = "0"