[package]
edition = "2021"
name = "cjk-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adblock = {version = "0", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"]}
aes = {version = "0", features = ["ctr"]}
anyhow = "1"
async-broadcast = "0"
base64 = "0"
bytes = {version = "1", features = ["serde"]}
chacha20 = "0"
cipher = "0"
clap = {version = "3", features = ["derive"]}
env_logger = "0"
futures-lite = "1"
futures-util = "0"
httparse = "1"
ipnetwork = "0"
jni = "0"
lazy_static = "1"
log = "0"
mime_guess = "2"
pin-project-lite = "0"
rand = "0"
regex = "1"
rust-embed = '6'
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0"
smol = "1"
smol-timeout = "0"
url = "2"
chrono = "0"
dirs = "4" 
serde_with = "1"

[dev-dependencies]
maplit = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"


[lib]
crate-type = ["rlib", "dylib"]
name = "proxy"

[target.'cfg(not(target_arch = "mips"))'.dependencies]
futures-rustls = "0"
webpki-roots = "0"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"))'.dependencies]
cpufeatures = "0"
