[package]
edition = "2021"
name = "cpxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
async-shutdown = "0"
atomic = "0"
base64 = "0.21"
orion = "0"
bit = "0"
blake2 = "0"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chacha20 = "0"
chrono = { version = "0", features = ["serde"] }
cipher = "0"
clap = { version = "4", features = ["derive"] }
derive_more = "0"
dirs = "5"
dns-parser = "0"
either = "1"
enum-primitive-derive = "0"
env_logger = "0"
httparse = "1"
ipnetwork = "0"
jni = "0"
lazy_static = "1"
libc = "0"
log = "0"
mime_guess = "2"
num-traits = "0"
parking_lot = "0"
pin-project-lite = "0"
rand = { version = "0", features = ["min_const_gen"] }
regex = "1"
rust-embed = "6"
scopeguard = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0"
siphasher = "0"
smallvec = { version = "1", features = ["const_generics", "write"] }
tls-parser = "0"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["sync", "net"] }
tokio-util = { version = "0", features = ["codec"] }
hyper = { version = "0", features = ["http1", "server", "client"] }
axum = "0"
tokio-native-tls = { version = "0", features = ["vendored"] }
once_cell = "1"
rmp-serde = "1"
netstack-lwip = { path = "../netstack-lwip" }
sha1_smol = "1"
socks5-impl = "0"
dnsclient = { version = "0", default-features = false, features = ["async-tokio"] }
dashmap = { version = "5", features = ["serde"] }

[dev-dependencies]
maplit = "1"

[build-dependencies]


[target.'cfg(unix)'.dependencies]
nix = { version = "0", features = ["net"] }

[target.'cfg(target_os = "linux")'.dependencies]
interfaces = "0"
iptables = "0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"

[lib]
crate-type = ["rlib", "dylib"]
name = "cpxy"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0"
