[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2"
log = "0"
env_logger = "0"
adblock = { version = "0", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"]}
base64 = "0"
read_transform = "0"