[package]
name = "userip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pnet = "0"
smoltcp = "0"
smol = "1"
smol-timeout = "0"
log = "0"
bytes = "1"
anyhow = "1"
futures = "0"
futures-util = "0"
derive_more = "0"
parking_lot = "0"
enum_dispatch = "0"
rand = "0"

[dev-dependencies]
tun = "0"